dist/1.0/bin/sample/retrieveUnpackaged/objects/Currency_NBP__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Name__c</fullName>
        <label>Currency Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Currency NBP</label>
    <listViews>
        <fullName>Currencies</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Currency_Name__c</columns>
        <columns>Rate__c</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>Currencies</label>
    </listViews>
    <nameField>
        <displayFormat>Cur-{0000}</displayFormat>
        <label>Currency NBP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currencies NBP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>